--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "aislides",
+  "name": "interactiveslides",
   "version": "0.1.0",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/beasleydog/aislides.git"
+    "url": "https://github.com/beasleydog/interactiveslides.git"
   },
   "scripts": {
     "dev": "next dev",
@@ -14,19 +14,19 @@
   },
   "dependencies": {
     "@google-ai/generativelanguage": "^3.2.0",
-    "next": "15.3.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "14.2.5",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "tailwindcss": "^4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
