--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google-ai/generativelanguage": "^3.2.0",
+    "geist": "^1.4.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
