--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   },
   "dependencies": {
     "@google-ai/generativelanguage": "^3.2.0",
+    "@tailwindcss/postcss": "^4",
+    "autoprefixer": "^10.4.21",
     "geist": "^1.4.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.1",
-    "@tailwindcss/postcss": "^4"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
